--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<h1>
-    Hello Git Practice
-</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
 
